--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "todoreact",
   "version": "0.1.0",
   "private": true,
+  "author": "Braian Molina <braian_gabriel_1993@hotmail.com>",
+  "license": "MIT",
   "dependencies": {
     "@testing-library/jest-dom": "5.16.4",
     "@testing-library/react": "13.2.0",
