--- a/nginx.conf
+++ b/nginx.conf
@@ -15,6 +15,8 @@ http {
 
     location / {
       root /usr/share/nginx/html;
+      index index.html index.htm; # default index file
+      try_files $uri $uri/ /index.html; # SPA support for react-router or vue-router etc.
     }
   }
 
