--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "todoreact",
+  "name": "todolist",
   "version": "0.1.0",
   "private": true,
   "author": "Braian Molina <braian_gabriel_1993@hotmail.com>",
   "license": "MIT",
   "dependencies": {
-    "@testing-library/jest-dom": "5.16.4",
-    "@testing-library/react": "13.2.0",
-    "@testing-library/user-event": "13.5.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-scripts": "5.0.1",
@@ -17,9 +14,7 @@
     "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -38,9 +33,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "4.0.0"
-  },
-  "homepage": "https://bmolina1993.github.io/todoReact"
+  }
 }
