--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "author": "Braian Molina <braian_gabriel_1993@hotmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@testing-library/jest-dom": "5.16.4",
+    "@testing-library/react": "13.2.0",
+    "@testing-library/user-event": "13.5.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-scripts": "5.0.1",
@@ -13,7 +16,6 @@
   "scripts": {
     "dev": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
